footer should exist on tablet widths (bug 1129031)

--- a/src/media/css/footer.styl
+++ b/src/media/css/footer.styl
@@ -7,12 +7,7 @@ $support-nav-height = 55px;
     display: none;
 }
 
-@media $base-desktop {
-    #newsletter-footer {
-        border-bottom: 1px solid $cloud-gray;
-        border-top: 1px solid $cloud-gray;
-    }
-
+@media $base-tablet {
     #footzilla {
         background: url(../img/logos/footzilla.svg) no-repeat;
         float: left;
